<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res/rdc.jim.wifip2p_coursework"
    android:id="@+id/main_draw"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 主界面布局 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <!-- 顶端标题 -->

            <RelativeLayout
                android:id="@+id/top_ll"
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:layout_alignParentTop="true"
                android:background="#1E90FF" >

                <TextView
                    android:id="@+id/name_top_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dip"
                    android:text="@string/default_title"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/file_btn"
                    android:layout_width="50dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/button_style"
                    android:text="@string/file_select"
                    android:textSize="15sp" />
            </RelativeLayout>

            <!-- 底端布局 -->

            <RelativeLayout
                android:id="@+id/bottom_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#D3D3D3" >

                <EditText
                    android:id="@+id/input_et"
                    android:layout_width="200dip"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dip"
                    android:background="@drawable/login_edit_normal"
                    android:hint="@string/default_input" />

                <Button
                    android:id="@+id/sumit_btn"
                    android:layout_width="50dip"
                    android:layout_height="40dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/button_style"
                    android:text="@string/sendbtn_text"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/groupsumit_btn"
                    android:layout_width="50dip"
                    android:layout_height="40dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/button_style"
                    android:text="@string/group_sentbtn_text"
                    android:textSize="15sp" />
            </RelativeLayout>

            <!-- 中间对话栏 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottom_ll"
                android:layout_below="@id/top_ll"
                android:background="#ffffff"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/chat_list_lv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dip"
                    android:divider="@null"
                    android:dividerHeight="5dip"
                    android:listSelector="#00000000" >
                </ListView>
            </LinearLayout>

            <ImageView
                android:id="@+id/main_show_im"
                android:layout_width="200dip"
                android:layout_height="220dip"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:visibility="gone" />
        </RelativeLayout>
    </FrameLayout>

    <!-- 侧拉抽屉布局 -->

    <LinearLayout
        android:layout_width="240dip"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#aabbcc"
        android:choiceMode="singleChoice"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip" >

                <rdc.jim.view.CustomImageView
                    android:id="@+id/icon_ibtn"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dip"
                    zhy:borderRadius="50dip"
                    zhy:src="@drawable/me"
                    zhy:type="circle" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dip"
                    android:layout_toRightOf="@id/icon_ibtn"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!-- 连接列表 -->

            <ListView
                android:id="@+id/con_lv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:listSelector="#00000000" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>